Fixed spacing issue in helpbox component

--- a/src/app/helpbox/helpbox.component.css
+++ b/src/app/helpbox/helpbox.component.css
@@ -23,6 +23,7 @@ mat-card {
 
 mat-dialog-content {
     padding-top: 5px;
+    padding-bottom: 15px;
     display: grid;
     grid-template-columns: repeat(3, minmax(280px, 1fr));
     grid-gap: 30px;
